<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/cafe"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundopacity"
   />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/coffee"
            app:tint="#fff"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/cafehouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:shadowColor="#F3EFEF"
            android:text="@string/cafe_house"
            android:textColor="#F3ECEC"
            android:textSize="60sp" />

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/login"
            app:backgroundTint="#ED7B7B"
          />

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/registration"
            app:backgroundTint="#ED7B7B"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/allready_account"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
